<resources>
    <string name="app_name">appMovies</string>
    <string name="Correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="fondo">Fondo</string>
    <string name="movies">MOVIES</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="nombre">Nombre</string>
    <string name="registro">Registrarse</string>
</resources>